# BugreportChecker_Site

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
docs/: bugreport.js  bugreport.wasm  index.html
include/: Application.h  Common.h
include/analyzer/: ReportAnalyzer.h
src/: Application.cpp  wasm_bridge.cpp
src/analyzer/: ReportAnalyzer.cpp
src/rules/: FileSystemRules.cpp  FrameworkRules.cpp  LogRules.cpp  ProcessRules.cpp  RulesCommon.cpp
src/ui/: ConsoleUI.cpp
